fixes title spacing on tabs

--- a/src/components/ListTab/style.less
+++ b/src/components/ListTab/style.less
@@ -53,6 +53,7 @@
       isolation: isolate;
       font-size: 1.8rem;
       line-height: initial;
+      margin-bottom: .3rem;
       z-index: 1;
       transition: color 100ms 200ms, z-index 0ms 300ms;
 
